@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-The contents of this file are subject to the Terracotta Public License Version
-2.0 (the "License"); You may not use this file except in compliance with the
-License. You may obtain a copy of the License at 
+   Copyright Terracotta, Inc.
+   Copyright Super iPaaS Integration LLC, an IBM Company 2024
 
-     http://terracotta.org/legal/terracotta-public-license.
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
 
-Software distributed under the License is distributed on an "AS IS" basis,
-WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for
-the specific language governing rights and limitations under the License.
+       http://www.apache.org/licenses/LICENSE-2.0
 
-The Covered Software is Terracotta Platform.
-
-The Initial Developer of the Covered Software is 
-     Terracotta, Inc., a Software AG company
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -22,8 +22,7 @@ The Initial Developer of the Covered Software is
   <parent>
     <groupId>org.terracotta</groupId>
     <artifactId>terracotta-root</artifactId>
-    <version>4.3.10-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <version>4.4.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>build-parent</artifactId>
@@ -32,30 +31,27 @@ The Initial Developer of the Covered Software is
 
   <licenses>
     <license>
-      <name>Terracotta Public License</name>
-      <url>http://www.terracotta.org/legal/terracotta-public-license</url>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <core-storage-api.version>1.4</core-storage-api.version>
-    <heap-core-storage.version>1.2.1</heap-core-storage.version>
-    <bigmemory-core-storage.version>2.1.1</bigmemory-core-storage.version>
-    <search.version>1.5.14</search.version>
-    <management-core.version>2.1.27</management-core.version>
-    <session-management.version>4.3.9</session-management.version>
-    <tc-messaging.version>1.1.6</tc-messaging.version>
-    <terracotta-license.version>1.2.3</terracotta-license.version>
-    <toolkit-api.version>2.10</toolkit-api.version>
-    <toolkit-api-internal.version>1.19</toolkit-api-internal.version>
+    <core-storage-api.version>1.6</core-storage-api.version>
+    <heap-core-storage.version>1.2.2</heap-core-storage.version>
+    <bigmemory-core-storage.version>2.1.4</bigmemory-core-storage.version>
+    <search.version>1.5.20</search.version>
+    <management-core.version>4.4.1-SNAPSHOT</management-core.version>
+    <tc-messaging.version>1.1.13</tc-messaging.version>
+    <terracotta-license.version>0.9.2</terracotta-license.version>
+    <toolkit-api.version>2.11</toolkit-api.version>
+    <toolkit-api-internal.version>1.20</toolkit-api-internal.version>
     <!-- version of ehcache embedded inside toolkit -->
-    <ehcache.version>2.10.10-SNAPSHOT</ehcache.version>
-    <tcconfig.version>9.6</tcconfig.version>
-    <linked-child-process.version>1.0.17</linked-child-process.version>
-    <groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
-    <groovy.version>2.5.8</groovy.version>
+    <ehcache.version>2.11.1-SNAPSHOT</ehcache.version>
+    <tcconfig.version>9.7</tcconfig.version>
+    <linked-child-process.version>2.0.3</linked-child-process.version>
     <skip.testjar>false</skip.testjar>
     <listName>checkshort.txt</listName>
     <localMavenRepository>${user.home}/.m2/repository</localMavenRepository>
@@ -90,7 +86,9 @@ The Initial Developer of the Covered Software is
       -Dtc.install-root.ignore-checks=true
       -Dcom.sun.management.jmxremote
       ${surefire.additional-jvm-args}
-      ${surefire.additional-jvm-module-args}</surefire.argLine>
+      ${surefire.additional-jvm-module-args}
+      -Djdk.attach.allowAttachSelf
+    </surefire.argLine>
   </properties>
 
   <dependencyManagement>
@@ -141,7 +139,7 @@ The Initial Developer of the Covered Software is
         <version>${management-core.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.terracotta.license</groupId>
+        <groupId>org.terracotta.license.ibm</groupId>
         <artifactId>terracotta-license</artifactId>
         <version>${terracotta-license.version}</version>
       </dependency>
@@ -176,7 +174,7 @@ The Initial Developer of the Covered Software is
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
+      <artifactId>mockito-inline</artifactId>
     </dependency>
     <dependency>
       <groupId>org.terracotta</groupId>
@@ -270,11 +268,13 @@ The Initial Developer of the Covered Software is
                 <reportFormat>plain</reportFormat>
                 <includes>
                   <include>**/*Test.java</include>
-                </includes>         
+                </includes>
                 <forkCount>1</forkCount>
                 <reuseForks>false</reuseForks>
                 <forkedProcessTimeoutInSeconds>${tc.tests.info.junit-test-timeout-inseconds}</forkedProcessTimeoutInSeconds>
                 <useSystemClassLoader>true</useSystemClassLoader>
+                <useManifestOnlyJar>true</useManifestOnlyJar>
+                <trimStackTrace>false</trimStackTrace>
                 <workingDirectory>${project.build.directory}/temp</workingDirectory>
                 <devLog>true</devLog>
                 <argLine>${surefire.argLine}</argLine>
@@ -328,7 +328,11 @@ The Initial Developer of the Covered Software is
       <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>groovy-maven-plugin</artifactId>
-      </plugin>      
+      </plugin>
+      <plugin>
+        <groupId>org.terracotta</groupId>
+        <artifactId>maven-forge-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
